# bpfids

./: .gitignore  Cargo.toml  Makefile  banlist.txt  bpfids.c  build.rs  compile_commands.json  config.json  flake.nix  wrapper.h
.cache/clangd/index/: bpfids.c.2CAA308551637389.idx  bpfidsrules.c.DB440645F0DBA89A.idx
src/: bpfloader.rs  bpfmap.rs  ids.rs  iplist.rs  main.rs
