[package]
name = "bpfids"
version = "0.1.0"
edition = "2024"
resolver = "2"
[dependencies]
anyhow = "1.0.100"
cidr = { version = "0.3.1", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
ctrlc = "3.5.0"
libbpf-rs = "0.25.0"
nix = { version = "0.30.1", features = ["net"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[build-dependencies]
bindgen = "0.71.0"
